@@ -45,54 +45,24 @@ void SettingsPanelButton::render() {
 	}
 
 	this->prevValue = this->isActiveFunc();
-	TTGOClass::getWatch()->tft->fillRect(
+		TTGOClass::getWatch()->tft->fillRoundRect(
 		this->getX(),
 		this->getY(),
 		this->getWidth(),
 		this->getHeight(),
-		COLOR_BACKGROUND
-	);
-
-	TTGOClass::getWatch()->tft->fillRect(
-		this->getX() + 22,
-		this->getY(),
-		this->getWidth() - 44 ,
-		this->getHeight() + 1,
-		COLOR_MAIN_1
-	);
-	TTGOClass::getWatch()->tft->fillCircle(
-		this->getX() + 25,
-		this->getY() + (this->getHeight() / 2),
-		this->getHeight() / 2,
-		COLOR_MAIN_1
-	);
-	TTGOClass::getWatch()->tft->fillCircle(
-		this->getX() + this->getWidth() - 25,
-		this->getY() + (this->getHeight() / 2),
-		this->getHeight() / 2,
+		18,
 		COLOR_MAIN_1
 	);
 
 	if (this->isActiveFunc() == false) {
-		TTGOClass::getWatch()->tft->fillRect(
-			this->getX() + 23,
-			this->getY() + 1,
-			this->getWidth() - 46,
-			this->getHeight() - 1,
-			COLOR_BACKGROUND
-		);
-		TTGOClass::getWatch()->tft->fillCircle(
-			this->getX() + 25,
-			this->getY() + (this->getHeight() / 2),
-			(this->getHeight() / 2) - 1,
-			COLOR_BACKGROUND
-		);
-		TTGOClass::getWatch()->tft->fillCircle(
-			this->getX() + this->getWidth() - 25,
-			this->getY() + (this->getHeight() / 2),
-			(this->getHeight() / 2) - 1,
-			COLOR_BACKGROUND
-		);
+		TTGOClass::getWatch()->tft->fillRoundRect(
+		this->getX() + 2,
+		this->getY() + 2,
+		this->getWidth() - 4,
+		this->getHeight()- 4,
+		18,
+		COLOR_BACKGROUND
+	);
 	}
 	TTGOClass::getWatch()->tft->setTextColor(this->isActiveFunc() ? COLOR_BACKGROUND : COLOR_MAIN_1);
 	TTGOClass::getWatch()->tft->drawString(
