@@ -4,6 +4,7 @@ REDESIGN: new set of app menu icons
 REDESIGN: remove grasy tones from splash screen
 REFACTOR: onSwipe(up|down|left|right) methods instead of handle SwipeVertical/horizontal in apps
 REFACTOR: AppMenu launching from watch faces by swipe up
+REFACTOR: settings screen buttons rendering with fillRoundRect instead circle+rect+circle
 
 cyberWatch 1.2
 ========================
